WebUI: announce number of search results for extensions and downloads

Bug: 866932
Change-Id: I10d7543af43e778265d73b4b10b3a27b8fbf2e29
Reviewed-on: https://chromium-review.googlesource.com/c/1308263
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Reviewed-by: Hector Carmona <hcarmona@chromium.org>
Commit-Queue: Esmael El-Moslimany <aee@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604714}
Former-commit-id: f67b2a2c7f63bd4576b160a246d4817d1467dee5